<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizzapizza"
    tools:context=".AddPizza">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/cname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cname"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textColorHint="#000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textColorHint="#000" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textColorHint="#000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/pname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pname"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textColorHint="#000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/size2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sizeup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6C881A"
                android:text="@string/add" />

            <TextView
                android:id="@+id/sizenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sizenum"
                android:textColor="#000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/sizedown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D22F2F"
                android:text="@string/sub" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/topMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topMax"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/top1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top1Cheese"
                android:textColor="#000000" />

            <Button
                android:id="@+id/top1up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6C871A"
                android:text="@string/add" />

            <TextView
                android:id="@+id/top1num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top1num"
                android:textColor="#000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/top1down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D12F2F"
                android:text="@string/sub" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/top2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top2Pepperoini"
                android:textColor="#000000" />

            <Button
                android:id="@+id/top2up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6C861A"
                android:text="@string/add" />

            <TextView
                android:id="@+id/top2num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top2num"
                android:textColor="#000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/top2down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D02F2F"
                android:text="@string/sub" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/top3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top3Bacon"
                android:textColor="#000000" />

            <Button
                android:id="@+id/top3up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6C851A"
                android:text="@string/add" />

            <TextView
                android:id="@+id/top3num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top3num"
                android:textColor="#000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/top3down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D02F2F"
                android:text="@string/sub" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/top4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top4Pineapple"
                android:textColor="#000000" />

            <Button
                android:id="@+id/top4up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6C841A"
                android:text="@string/add" />

            <TextView
                android:id="@+id/top4num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top4num"
                android:textColor="#000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/top4down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CF2F2F"
                android:text="@string/sub" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/top5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top5Sausage"
                android:textColor="#000000" />

            <Button
                android:id="@+id/top5up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6C831A"
                android:text="@string/add" />

            <TextView
                android:id="@+id/top5num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top5num"
                android:textColor="#000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/top5down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CF2F2F"
                android:text="@string/sub" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/top6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top6Olives"
                android:textColor="#000000" />

            <Button
                android:id="@+id/top6up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6C821A"
                android:text="@string/add" />

            <TextView
                android:id="@+id/top6num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top6num"
                android:textColor="#000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/top6down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#CE2F2F"
                android:text="@string/sub" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/addbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#3F51B4"
        android:text="@string/addbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>